# cvoicecontrol

./: ChangeLog  Makefile.am  README.md  autogen.sh  configure.in  cvoicecontrol.kdevprj  cvoicecontrol.lsm
cvoicecontrol/: Makefile.am  audio.c  audio.h  bb_queue.c  bb_queue.h  config.h  configuration.c  configuration.h  cvoicecontrol.c  keypressed.c  keypressed.h  microphone_config.c  microphone_config.h  mixer.c  mixer.h  model.c  model.h  model_editor.c  model_editor.h  ncurses_tools.c  ncurses_tools.h  preprocess.c  preprocess.h  queue.c  queue.h  realfftf.c  score.c  score.h  semaphore.c  semaphore.h
cvoicecontrol/docs/en/: Makefile.am
src/: audio.c  bb_queue.h  configuration.c  cvoicecontrol.c  cvoicecontrol.h  microphone_config.c  mixer.c  mixer.h  model.h  model_editor.c  ncurses_tools.c  preprocess.c  preprocess.h  realfftf.c  realfftf.h  score.c  score.h
src/docs/en/: index-3.html
